add updated json method